# titanium

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_debug.sh  build_release.sh  compile_commands.json  flake.nix  imgui.ini  mp_box.bsp.gltf  shell.nix  todo.sh
game/: CMakeLists.txt  game_consolecommand.cpp  game_consolecommand.hpp  game_loadassimp.cpp  game_loadassimp.hpp  game_main.cpp
libtitanium/: CMakeLists.txt
libtitanium/config/: .config.cpp.kate-swp  CMakeLists.txt  config.cpp  config.hpp
libtitanium/dev/: CMakeLists.txt  tests.cpp  tests.hpp
libtitanium/filesystem/: filesystem.cpp
libtitanium/imgui_widgets/: .imgui_widgets.hpp.kate-swp  CMakeLists.txt  console.cpp  debugoverlay.cpp  widgets.hpp
libtitanium/input/: input_actions.cpp  input_actions.hpp  input_device.cpp  input_device.hpp  input_device_enum.cpp
libtitanium/jobsystem/: CMakeLists.txt  jobs_api.hpp
libtitanium/logger/: CMakeLists.txt  logger.cpp  logger.hpp
libtitanium/memory/: mem_core.cpp  mem_core.hpp  mem_external.cpp  mem_external.hpp
libtitanium/renderer/: renderer.cpp  renderer.hpp  renderer_device.cpp  renderer_object.cpp  renderer_resource.cpp  renderer_stringify.cpp  renderer_stringify.hpp  renderer_uniforms.hpp  stringify.hpp
libtitanium/renderer/utils/: stringify.hpp
libtitanium/sys/: platform_sdl.cpp  platform_sdl.hpp  sdl_stringify.cpp  sdl_stringify.hpp  sys_sdl.cpp  sys_sdl.hpp
libtitanium/sys/platform/sdl/: stringify.hpp  sys_sdl.cpp  sys_sdl.hpp
libtitanium/util/: CMakeLists.txt  assert.hpp  commandline.cpp  commandline.hpp  enum_flags.hpp  maths.cpp  maths.hpp  stacktrace.hpp  static_array.hpp  string.cpp  string.hpp
libtitanium/util/data/: hashmap.hpp  safereadbuf.hpp  span.hpp  span_dynamic_tests.cpp  span_impl.inl  staticspan.hpp  staticspan_impl.inl  stringbuf.hpp  stringbuf_impl.inl  vector.hpp  vector_impl.inl  vector_tests.cpp
libtitanium/util/parser/: namespaced.cpp  namespaced.hpp
libtitanium/util/parser/samples/bdef/: infinite_ammo.bdef  locale_test_english.bdef
test_resource/damaged/: DamagedHelmet.gltf
titanium/: CMakeLists.txt
titanium/config/: CMakeLists.txt  config.hpp
titanium/dev/: tests.cpp  tests.hpp
titanium/devmode/: CMakeLists.txt  tests.hpp
titanium/filesystem/: CMakeLists.txt  fs_api.hpp
titanium/jobsystem/: jobs_api.hpp
titanium/logger/: logger.cpp  logger.hpp
titanium/memory/: CMakeLists.txt  mem_core.cpp  mem_core.hpp
titanium/programs/: CMakeLists.txt
titanium/programs/engine/: CMakeLists.txt  engine_main.cpp
titanium/renderer/: CMakeLists.txt  renderer.cpp  renderer_api.hpp
titanium/renderer/rapi/vulkan/: CMakeLists.txt  vk_device.cpp  vk_device.hpp  vk_main.cpp  vk_main.hpp  vk_utils.cpp  vk_utils.hpp
titanium/renderer/utils/: stringify.hpp
titanium/sys/: CMakeLists.txt
titanium/sys/platform/sdl/: stringify.hpp  sys_sdl.cpp  sys_sdl.hpp
titanium/util/: CMakeLists.txt  assert.hpp  commandline.cpp  commandline.hpp  contract.hpp  maths.hpp  numerics.hpp  scopeddestroy.hpp  staticinitialise.hpp  string.cpp  string.hpp  template_constraints.hpp
titanium/util/data/: datanode.cpp  datanode.hpp  hashmap.hpp  map.hpp  safereadbuf.hpp  span.hpp  span_impl.inl  staticspan.hpp  staticspan_impl.inl  stringbuf.hpp  stringbuf_impl.inl  vector.hpp  vector_impl.inl  vector_tests.cpp  vector_tests.inl
titanium/util/parser/: bdef.cpp  bdef.hpp  namespaced.cpp  namespaced.hpp
titanium/util/parser/samples/bdef/: w_rocket_launcher.bdef
