# titanium contains the main source for the titanium engine
add_subdirectory( memory )
add_subdirectory( logger )
add_subdirectory( util )
add_subdirectory( dev )
add_subdirectory( sys )
add_subdirectory( config )
add_subdirectory( filesystem )
add_subdirectory( renderer )
add_subdirectory( imgui_widgets )

include_directories(*)
